--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1"
   },
@@ -33,5 +34,4 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
-  
 }
